--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="/slime.png" />
+  <link rel="icon" href="/rpglogo_goofy.png" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <meta name="viewport" content="initial-scale=1, width=device-width" />
   <title>RPG Together</title>
